2002-05-27  Chris Lyttle  <chris@wilddev.net>

	* Makefile.am: remove omf-install dir
	* configure.in: remove nautilus-quick-reference,
	nautilus-release-notes, nautilus-screenshot-guidelines from
	makefiles section.
	* help/omf.make: Added new file for changed omf build system
	* help/xmldocs.make: Updated for new omf build system
	* help/Makefile.am: remove nautilus-quick-reference,
	nautilus-release-notes, nautilus-screenshot-guidelines from subdirs
	and htmldocs.make, sgmldocs.make from EXTRA_DIST
	* help/nautilus-user-manual/C/Makefile.am: Change figs to figdir, add
	legal.xml
	* help/nautilus-user-manual/C/nautilus-user-manual-C.omf: Changed to
	conform to new omf format
	
2002-05-24  Anders Carlsson  <andersca@gnu.org>

	* src/file-manager/fm-desktop-icon-view.c: (volume_ops_callback):
	Don't exit if the file is local. Sigh, won't people test their code?

	* src/file-manager/fm-directory-view.c: (activate_callback):
	Special case "file" type URIs, so that people can still open
	their nfs mounted directories.
	
	* src/nautilus-window-private.h:
	* src/nautilus-window-toolbars.c:
	(nautilus_window_initialize_toolbars):
	* src/nautilus-window.c: (nautilus_window_finalize):
	Remove un-needed theme code.
	
2002-05-24  Michael Meeks  <michael@ximian.com>

	* components/tree/nautilus-tree-view.c
	(row_inserted_expand_node_callback): work around the
	aformentioned gtk+ bug, since it seems not to be being fixed.

2002-05-24  Michael Meeks  <michael@ximian.com>

	* libnautilus-private/nautilus-icon-dnd.c
	(drag_data_received_callback): fix proximate cause of #80896

	* libnautilus-private/nautilus-icon-container.c
	(nautilus_icon_container_update_icon): fix proximate cause
	of #78568.

2002-05-24  Alex Graveley  <alex@ximian.com>

	* libnautilus-private/nautilus-monitor.c (monitor_add_internal):
	Fix typo which was horking monitors.

2002-05-23  Alex Graveley  <alex@ximian.com>

	* libnautilus-private/nautilus-link-desktop-file.c